# python-software-engineering

./: README.md  REAMDME.md  requirements.txt
materials/content/carbon/: logging_sample.py  mypy_examples.py  pandas_dtypes.py  poetry_.sh  setup.py  setup_advanced.py  structured_logging.py
materials/content/cohesian&coupling/: abstraction.py  inheritance.py  injection.py  multi_abstract.py  multiple_inheritance.py  tips.py
materials/content/patterns/: iterator_pattern.py  null object.py  signletons.py
materials/content/slides/: slides.md
materials/exercise/cohesion_coupling/: 3_protocols.py
materials/exercise/cohesion_coupling/handson/: base.py  example_2.py
materials/exercise/effective_programming/documentation/foo/: Instructions.rst  pyproject.toml
materials/exercise/effective_programming/documentation/foo/foo/: foo.py
materials/exercise/effective_programming/optimization/: pandas_dtypes.py  pandas_iteration.py  pandas_joins.py  timing_pandas.py
materials/exercise/microservice/: app.py
materials/exercise/monster_hunter/: app.py
materials/exercise/oop_quarks/: app.py
materials/exercise/software_patterns/: observer.py
materials/exercise/solutions/effective_programming/documentation/foo/: Instructions.rst  pyproject.toml
materials/exercise/solutions/effective_programming/documentation/foo/docs/source/: code.rst  conf.py  index.rst
materials/exercise/tennis_refactoring_kata/: README.md  tennis.py
materials/exercise/towers_of_hanoi/: towers.py
materials/exercise/yahtzee_refactoring_kata/: test_yahtzee.py  yahtzee.py
(+38 files in other folders)
