[tool.poetry]
name = "foo"
version = "0.1.0"
description = "An example"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
